# QtSynthesizer

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  block.cpp  block.h  customgraphics.h  customgraphicsscene.cpp  customgraphicsscene.h  customgraphicsview.cpp  customgraphicsview.h  customrect.cpp  customrect.h  customui.cpp  customui.h  effectsdialog.cpp  effectsdialog.h  graph.cpp  graph.h  graphicseye.cpp  graphicseye.h  graphicsseek.cpp  graphicsseek.h  main.cpp  mainwindow.cpp  mainwindow.h  section.cpp  section.h  signaldialog.cpp  signaldialog.h  signalprocess.cpp  signalprocess.h  signalproperties.cpp  signalproperties.h  signalvector.cpp  signalvector.h  timelinewidget.cpp  timelinewidget.h  track.cpp  track.h  (+2 more)
assets/: assets.qrc
